--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     { "src": "backend/server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/send", "dest": "/backend/server.js" },
+    { "src": "/api/send", "dest": "/backend/server.js" },
     { "src": "/(.*)", "dest": "/frontend/index.html" }
   ]
 }
