--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "backend/server.js", "use": "@vercel/node" }
+    { "src": "backend/server.js", "use": "@vercel/node", "config": { "includeFiles": ["package.json", "package-lock.json"] } }
   ],
   "routes": [
-    { "src": "/send", "dest": "/backend/server.js" },
-    { "src": "/(.*)", "dest": "/frontend/index.html" }
+    { "src": "/api/send", "dest": "backend/server.js" },
+    { "src": "/(.*)", "dest": "frontend/index.html" }
   ]
 }
